<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nennashi</string>
    <string name="title">年無釣行記</string>
    <string name="main_view_btn">釣果を見る</string>
    <string name="main_edit_btn">釣果をつける</string>
    <string name="main_tide_btn">潮汐表</string>
    <string name="main_wave_btn">波予測</string>
    <string name="main_weather_btn">天気予報</string>
    <string name="main_tacklebox_btn">道具箱</string>
    <string name="view_photo_txt">写真</string>
    <string name="view_info_txt">日時／場所／サイズ</string>
    <string name="dateconditions_after_txt">以降</string>
    <string name="dateconditions_before_txt">以前</string>
    <string name="edit_date_btn">日付</string>
    <string name="edit_time_btn">時間</string>
    <string name="edit_place_txt">場所：</string>
    <string name="edit_size_txt">サイズ：</string>
    <string name="edit_cm_txt">cm</string>
    <string name="edit_rod_txt">竿：</string>
    <string name="edit_reel_txt">リール：</string>
    <string name="edit_float_txt">うき：</string>
    <string name="edit_favorite_txt">お気に入りを設定：</string>
    <string name="tackle_rod_txt">竿</string>
    <string name="tackle_reel_txt">リール</string>
    <string name="tackle_float_txt">うき</string>
    <string name="tackle_line_txt">道糸</string>
    <string name="tackle_fookline_txt">ハリス</string>
    <string name="tackle_komase_txt">コマセ</string>
    <string name="tackleview_no_txt">NO</string>
    <string name="tackleview_name_txt">名前</string>
    <string name="tackleview_favorite_txt">★</string>
    <string name="tackleview_regist_txt">登録</string>
    <string name="tackleview_update_txt">更新</string>
    <string name="tackleview_delete_txt">削除</string>
    <string name="tackleview_favorite_name_txt">お気に入り設定</string>

    <string-array name="float_spinner">
        <item>00</item>
        <item>0シブ</item>
        <item>0</item>
        <item>B</item>
        <item>2B</item>
        <item>3B</item>
        <item>5B</item>
        <item>1</item>
    </string-array>

    <string name="edit_line_txt">道糸：</string>
    <string name="edit_linewidth_txt">号</string>
    <string name="edit_fookline_txt">ハリス：</string>
    <string name="edit_fook_txt">針：</string>

    <string-array name="fook_spinner">
        <item>1号</item>
        <item>2号</item>
        <item>3号</item>
        <item>4号</item>
        <item>5号</item>
    </string-array>

    <string name="edit_komase_txt">コマセ：</string>
    <string name="edit_okiami_txt">オキアミ：</string>
    <string name="edit_kg_txt">kg</string>
    <string name="edit_esa_txt">付エサ：</string>
    <string name="edit_memo_txt">メモ：</string>
    <string name="edit_favorit1_btn">①</string>
    <string name="edit_favorit2_btn">②</string>
    <string name="edit_favorit3_btn">なし</string>
    <string name="slide_duration">100</string>

    <string-array name="area_spinner">
        <item>北海道</item>
        <item>青森県</item>
        <item>秋田県</item>
        <item>岩手県</item>
        <item>山形県</item>
        <item>宮城県</item>
        <item>福島県</item>
        <item>茨城県</item>
        <item>栃木県</item>
        <item>群馬県</item>
        <item>埼玉県</item>
        <item>東京都</item>
        <item>神奈川県</item>
        <item>千葉県</item>
        <item>静岡県</item>
        <item>山梨県</item>
        <item>新潟県</item>
        <item>長野県</item>
        <item>富山県</item>
        <item>石川県</item>
        <item>福井県</item>
        <item>岐阜県</item>
        <item>愛知県</item>
        <item>三重県</item>
        <item>滋賀県</item>
        <item>京都府</item>
        <item>大阪府</item>
        <item>奈良県</item>
        <item>和歌山県</item>
        <item>兵庫県</item>
        <item>岡山県</item>
        <item>鳥取県</item>
        <item>広島県</item>
        <item>島根県</item>
        <item>山口県</item>
        <item>香川県</item>
        <item>徳島県</item>
        <item>愛媛県</item>
        <item>高知県</item>
        <item>福岡県</item>
        <item>佐賀県</item>
        <item>長崎県</item>
        <item>大分県</item>
        <item>熊本県</item>
        <item>宮崎県</item>
        <item>鹿児島県</item>
        <item>沖縄県</item>
    </string-array>
    <string-array name="area_hokkaido_spinner">
        <item>宗谷地方(稚内)</item>
        <item>上川地方(旭川)</item>
        <item>留萌地方(留萌)</item>
        <item>石狩地方(札幌)</item>
        <item>空知地方(岩見沢)</item>
        <item>後志地方(倶知安)</item>
        <item>網走地方(網走)</item>
        <item>北見地方(北見)</item>
        <item>紋別地方(紋別)</item>
        <item>根室地方(根室)</item>
        <item>釧路地方(釧路)</item>
        <item>十勝地方(帯広)</item>
        <item>胆振地方(室蘭)</item>
        <item>日高地方(浦河)</item>
        <item>渡島地方(函館)</item>
        <item>檜山地方(江差)</item>
    </string-array>
    <string-array name="area_aomori_spinner">
        <item>津軽(青森)</item>
        <item>下北(むつ)</item>
        <item>三八上北(八戸)</item>
    </string-array>
    <string-array name="area_akita_spinner">
        <item>沿岸(秋田)</item>
        <item>内陸(横手)</item>
    </string-array>
    <string-array name="area_iwate_spinner">
        <item>内陸(盛岡)</item>
        <item>沿岸北部(宮古)</item>
        <item>沿岸南部(大船渡)</item>
    </string-array>
    <string-array name="area_yamagata_spinner">
        <item>村山(山形)</item>
        <item>置賜(米沢)</item>
        <item>庄内(酒田)</item>
        <item>最上(新庄)</item>
    </string-array>
    <string-array name="area_miyagi_spinner">
        <item>東部(仙台)</item>
        <item>西部(白石)</item>
    </string-array>
    <string-array name="area_fukushima_spinner">
        <item>浜通り(相馬)</item>
        <item>中通り(福島)</item>
        <item>会津(会津若松)</item>
    </string-array>
    <string-array name="area_ibaraki_spinner">
        <item>北部(水戸)</item>
        <item>南部(土浦)</item>
    </string-array>
    <string-array name="area_tochigi_spinner">
        <item>南部(宇都宮)</item>
        <item>北部(大田原)</item>
    </string-array>
    <string-array name="area_gunma_spinner">
        <item>南部(前橋)</item>
        <item>北部(水上)</item>
    </string-array>
    <string-array name="area_saitama_spinner">
        <item>南部(さいたま)</item>
        <item>北部(熊谷)</item>
        <item>秩父地方(秩父)</item>
    </string-array>
    <string-array name="area_tokyo_spinner">
        <item>東京地方(東京)</item>
        <item>伊豆諸島北部(大島)</item>
        <item>伊豆諸島南部(八丈島)</item>
        <item>小笠原諸島(父島)</item>
    </string-array>
    <string-array name="area_kanagawa_spinner">
        <item>東部(横浜)</item>
        <item>西部(小田原)</item>
    </string-array>
    <string-array name="area_chiba_spinner">
        <item>北西部(千葉)</item>
        <item>北東部(銚子)</item>
        <item>南部(館山)</item>
    </string-array>
    <string-array name="area_shizuoka_spinner">
        <item>中部(静岡)</item>
        <item>伊豆(石廊崎)</item>
        <item>東部(三島)</item>
        <item>西部(浜松)</item>
    </string-array>
    <string-array name="area_yamanashi_spinner">
        <item>中・西部(甲府)</item>
        <item>東部・富士五湖(河口湖)</item>
    </string-array>
    <string-array name="area_niigata_spinner">
        <item>下越(新潟)</item>
        <item>中越(長岡)</item>
        <item>上越(高田)</item>
        <item>佐渡(相川)</item>
    </string-array>
    <string-array name="area_nagano_spinner">
        <item>北部(長野)</item>
        <item>中部(松本)</item>
        <item>西部(飯田)</item>
    </string-array>
    <string-array name="area_toyama_spinner">
        <item>東部(富山)</item>
        <item>西部(伏木)</item>
    </string-array>
    <string-array name="area_ishikawa_spinner">
        <item>加賀(金沢)</item>
        <item>能登(輪島)</item>
    </string-array>
    <string-array name="area_fukui_spinner">
        <item>嶺北(福井)</item>
        <item>嶺南(敦賀)</item>
    </string-array>
    <string-array name="area_gifu_spinner">
        <item>美濃地方(岐阜)</item>
        <item>飛騨地方(高山)</item>
    </string-array>
        <string-array name="area_aichi_spinner">
        <item>西部(名古屋)</item>
        <item>東部(豊橋)</item>
    </string-array>
    <string-array name="area_mie_spinner">
        <item>北中部(津)</item>
        <item>南部(尾鷲)</item>
    </string-array>
    <string-array name="area_shiga_spinner">
        <item>南部(大津)</item>
        <item>北部(彦根)</item>
    </string-array>
    <string-array name="area_kyoto_spinner">
        <item>北部(舞鶴)</item>
        <item>南部(京都)</item>
    </string-array>
    <string-array name="area_osaka_spinner">
        <item>大阪府(大阪)</item>
    </string-array>
    <string-array name="area_nara_spinner">
        <item>北部(奈良)</item>
        <item>南部(風屋)</item>
    </string-array>
    <string-array name="area_wakayama_spinner">
        <item>北部(和歌山)</item>
        <item>南部(潮岬)</item>
    </string-array>
    <string-array name="area_hyogo_spinner">
        <item>南部(神戸)</item>
        <item>北部(豊岡)</item>
    </string-array>
    <string-array name="area_okayama_spinner">
        <item>南部(岡山)</item>
        <item>北部(津山)</item>
    </string-array>
    <string-array name="area_tottori_spinner">
        <item>東部(鳥取)</item>
        <item>中・西部(米子)</item>
    </string-array>
    <string-array name="area_hiroshima_spinner">
        <item>南部(広島)</item>
        <item>北部(庄島)</item>
    </string-array>
    <string-array name="area_shimane_spinner">
        <item>東部(松江)</item>
        <item>西部(浜田)</item>
        <item>隠岐(西郷)</item>
    </string-array>
    <string-array name="area_yamaguchi_spinner">
        <item>西部(下関)</item>
        <item>中部(山口)</item>
        <item>東部(柳井)</item>
        <item>北部(萩)</item>
    </string-array>
    <string-array name="area_kagawa_spinner">
        <item>香川県(高松)</item>
    </string-array>
    <string-array name="area_tokushima_spinner">
        <item>北部(徳島)</item>
        <item>南部(日和佐)</item>
    </string-array>
    <string-array name="area_ehime_spinner">
        <item>中予(松山)</item>
        <item>東予(新居浜)</item>
        <item>南予(宇和島)</item>
    </string-array>
    <string-array name="area_kochi_spinner">
        <item>中部(高知)</item>
        <item>東部(室戸岬)</item>
        <item>西部(清水)</item>
    </string-array>
    <string-array name="area_fukuoka_spinner">
        <item>福岡地方(福岡)</item>
        <item>北九州地方(八幡)</item>
        <item>筑豊地方(飯塚)</item>
        <item>筑後地方(久留米)</item>
    </string-array>
    <string-array name="area_saga_spinner">
        <item>南部(佐賀)</item>
        <item>北部(伊万里)</item>
    </string-array>
    <string-array name="area_nagasaki_spinner">
        <item>南部(長崎)</item>
        <item>北部(佐世保)</item>
        <item>壱岐・対馬(厳原)</item>
        <item>五島(福江)</item>
    </string-array>
    <string-array name="area_oita_spinner">
        <item>中部(大分)</item>
        <item>北部(中津)</item>
        <item>西部(日田)</item>
        <item>南部(佐伯)</item>
    </string-array>
    <string-array name="area_kumamoto_spinner">
        <item>熊本地方(熊本)</item>
        <item>阿蘇地方(阿蘇乙姫)</item>
        <item>天草・芦北地方(牛深)</item>
        <item>球磨地方(人吉)</item>
    </string-array>
    <string-array name="area_miyazaki_spinner">
        <item>南部平野部(宮崎)</item>
        <item>北部平野部(延岡)</item>
        <item>南部山沿い(都城)</item>
        <item>北部山沿い(高千穂)</item>
    </string-array>
    <string-array name="area_kagoshima_spinner">
        <item>薩摩地方(鹿児島)</item>
        <item>大隈地方(鹿屋)</item>
        <item>種子島・屋久島地方(西之表)</item>
        <item>奄美地方(名瀬)</item>
    </string-array>
    <string-array name="area_okinawa_spinner">
        <item>本島中南部(那覇)</item>
        <item>本島北部(名護)</item>
        <item>久米島(久米島)</item>
        <item>大東島地方(南大東島)</item>
        <item>宮古島地方(宮古島)</item>
        <item>石垣島地方(石垣島)</item>
        <item>与那国島地方(与那国島)</item>
    </string-array>

</resources>