<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/titletxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="30dp"
        android:textColor="#000000"
        android:textStyle="bold" >
    </TextView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tackleNo"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000000"
            android:layout_gravity="center"
            android:textSize="20dp" />


    <TextView
        android:id="@+id/rowid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/border"
        android:textSize="0dp"
        android:textColor="#000000"
        android:visibility="invisible">
    </TextView>

        <EditText
            android:id="@+id/tackleNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:inputType="text"
            android:maxLength="20"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/registbutton"
            android:layout_width="90dp"
            android:layout_height="55dp"
            android:layout_marginLeft="30dp"
            android:text="@string/tackleview_regist_txt"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/updatebutton"
            android:layout_width="90dp"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:text="@string/tackleview_update_txt"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/deletebutton"
            android:layout_width="90dp"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:text="@string/tackleview_delete_txt"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    <TextView
        android:id="@+id/favoritetxt"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/tackleview_favorite_name_txt"
        android:textColor="#000000"
        android:gravity="center"
        android:textSize="15dp">
    </TextView>

        <RadioGroup
            android:id="@+id/radiogroup_favorite"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radiobutton_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/edit_favorit1_btn" />

            <RadioButton
                android:id="@+id/radiobutton_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/edit_favorit2_btn" />

            <RadioButton
                android:id="@+id/radiobutton_nashi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:checked="true"
                android:text="@string/edit_favorit3_btn" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/notxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_header"
            android:maxWidth="30dp"
            android:minWidth="30dp"
            android:text="@string/tackleview_no_txt"
            android:textStyle="bold" >
        </TextView>

        <TextView
            android:id="@+id/nametxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_header"
            android:minWidth="300dp"
            android:text="@string/tackleview_name_txt"
            android:textStyle="bold" >
        </TextView>

        <TextView
            android:id="@+id/marktxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_header"
            android:minWidth="30dp"
            android:text="@string/tackleview_favorite_txt"
            android:textStyle="bold" >
        </TextView>
    </LinearLayout>

    <ListView
        android:id="@+id/android:list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>