<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/titletextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/main_tacklebox_btn"
            android:textColor="#000000"
            android:textSize="30dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/rodbutton"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginLeft="30dp"
            android:layout_toLeftOf="@+id/dummytextView1"
            android:text="@string/tackle_rod_txt"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dummytextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="28dp" />

        <Button
            android:id="@+id/reelbutton"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/dummytextView1"
            android:text="@string/tackle_reel_txt"
            android:textSize="30dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/floatbutton"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginLeft="30dp"
            android:layout_toLeftOf="@+id/dummytextView2"
            android:text="@string/tackle_float_txt"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dummytextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="28dp" />

        <Button
            android:id="@+id/linebutton"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/dummytextView2"
            android:text="@string/tackle_line_txt"
            android:textSize="30dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/fooklinebutton"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginLeft="30dp"
            android:layout_toLeftOf="@+id/dummytextView3"
            android:text="@string/tackle_fookline_txt"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dummytextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="28dp" />

        <Button
            android:id="@+id/komasebutton"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/dummytextView3"
            android:text="@string/tackle_komase_txt"
            android:textSize="30dp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>